# gitpilot

./: AGENTS.md  README.md  SKILL.md  mcp-config.example.json  pyproject.toml
src/gitpilot/: __init__.py  __main__.py  server.py
tests/: test_git_log.py  test_server_wrappers.py
